Stick to text search for entities at the moment
It is a pity that you’re not able to set “one of this parameters” kind of parameters in swagger or specify different operations for the same url + method. While I find a way to solve this I’d say we better stick with the most versatile of the 4 input types
