# lib/Model/EntityExtractionResponseAnnotationLod.php
@@ -1,0 +1,255 @@
+<?php
+/**
+ * EntityExtractionResponseAnnotationLod
+ *
+ * PHP version 5
+ *
+ * @category Class
+ * @package  DandelionPHP
+ * @author   Swaagger Codegen team
+ * @link     https://github.com/swagger-api/swagger-codegen
+ */
+
+/**
+ * Dandelion Swagger API
+ *
+ * Unofficial Dandelion Swagger API definition
+ *
+ * OpenAPI spec version: 0.0.1
+ * Contact: g.prinaricotti@gmail.com
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+
+namespace DandelionPHP\Model;
+
+use \ArrayAccess;
+
+/**
+ * EntityExtractionResponseAnnotationLod Class Doc Comment
+ *
+ * @category    Class
+ * @package     DandelionPHP
+ * @author      Swagger Codegen team
+ * @link        https://github.com/swagger-api/swagger-codegen
+ */
+class EntityExtractionResponseAnnotationLod implements ArrayAccess
+{
+    const DISCRIMINATOR = null;
+
+    /**
+      * The original name of the model.
+      * @var string
+      */
+    protected static $swaggerModelName = 'EntityExtractionResponseAnnotation_lod';
+
+    /**
+      * Array of property to type mappings. Used for (de)serialization
+      * @var string[]
+      */
+    protected static $swaggerTypes = [
+        'wikipedia' => 'string',
+        'dbpedia' => 'string'
+    ];
+
+    public static function swaggerTypes()
+    {
+        return self::$swaggerTypes;
+    }
+
+    /**
+     * Array of attributes where the key is the local name, and the value is the original name
+     * @var string[]
+     */
+    protected static $attributeMap = [
+        'wikipedia' => 'wikipedia',
+        'dbpedia' => 'dbpedia'
+    ];
+
+
+    /**
+     * Array of attributes to setter functions (for deserialization of responses)
+     * @var string[]
+     */
+    protected static $setters = [
+        'wikipedia' => 'setWikipedia',
+        'dbpedia' => 'setDbpedia'
+    ];
+
+
+    /**
+     * Array of attributes to getter functions (for serialization of requests)
+     * @var string[]
+     */
+    protected static $getters = [
+        'wikipedia' => 'getWikipedia',
+        'dbpedia' => 'getDbpedia'
+    ];
+
+    public static function attributeMap()
+    {
+        return self::$attributeMap;
+    }
+
+    public static function setters()
+    {
+        return self::$setters;
+    }
+
+    public static function getters()
+    {
+        return self::$getters;
+    }
+
+    
+
+    
+
+    /**
+     * Associative array for storing property values
+     * @var mixed[]
+     */
+    protected $container = [];
+
+    /**
+     * Constructor
+     * @param mixed[] $data Associated array of property values initializing the model
+     */
+    public function __construct(array $data = null)
+    {
+        $this->container['wikipedia'] = isset($data['wikipedia']) ? $data['wikipedia'] : null;
+        $this->container['dbpedia'] = isset($data['dbpedia']) ? $data['dbpedia'] : null;
+    }
+
+    /**
+     * show all the invalid properties with reasons.
+     *
+     * @return array invalid properties with reasons
+     */
+    public function listInvalidProperties()
+    {
+        $invalid_properties = [];
+
+        return $invalid_properties;
+    }
+
+    /**
+     * validate all the properties in the model
+     * return true if all passed
+     *
+     * @return bool True if all properties are valid
+     */
+    public function valid()
+    {
+
+        return true;
+    }
+
+
+    /**
+     * Gets wikipedia
+     * @return string
+     */
+    public function getWikipedia()
+    {
+        return $this->container['wikipedia'];
+    }
+
+    /**
+     * Sets wikipedia
+     * @param string $wikipedia URL of the Wikipedia article that represents the resource
+     * @return $this
+     */
+    public function setWikipedia($wikipedia)
+    {
+        $this->container['wikipedia'] = $wikipedia;
+
+        return $this;
+    }
+
+    /**
+     * Gets dbpedia
+     * @return string
+     */
+    public function getDbpedia()
+    {
+        return $this->container['dbpedia'];
+    }
+
+    /**
+     * Sets dbpedia
+     * @param string $dbpedia URI of the resource on DBpedia
+     * @return $this
+     */
+    public function setDbpedia($dbpedia)
+    {
+        $this->container['dbpedia'] = $dbpedia;
+
+        return $this;
+    }
+    /**
+     * Returns true if offset exists. False otherwise.
+     * @param  integer $offset Offset
+     * @return boolean
+     */
+    public function offsetExists($offset)
+    {
+        return isset($this->container[$offset]);
+    }
+
+    /**
+     * Gets offset.
+     * @param  integer $offset Offset
+     * @return mixed
+     */
+    public function offsetGet($offset)
+    {
+        return isset($this->container[$offset]) ? $this->container[$offset] : null;
+    }
+
+    /**
+     * Sets value based on offset.
+     * @param  integer $offset Offset
+     * @param  mixed   $value  Value to be set
+     * @return void
+     */
+    public function offsetSet($offset, $value)
+    {
+        if (is_null($offset)) {
+            $this->container[] = $value;
+        } else {
+            $this->container[$offset] = $value;
+        }
+    }
+
+    /**
+     * Unsets offset.
+     * @param  integer $offset Offset
+     * @return void
+     */
+    public function offsetUnset($offset)
+    {
+        unset($this->container[$offset]);
+    }
+
+    /**
+     * Gets the string presentation of the object
+     * @return string
+     */
+    public function __toString()
+    {
+        if (defined('JSON_PRETTY_PRINT')) { // use JSON pretty print
+            return json_encode(\DandelionPHP\ObjectSerializer::sanitizeForSerialization($this), JSON_PRETTY_PRINT);
+        }
+
+        return json_encode(\DandelionPHP\ObjectSerializer::sanitizeForSerialization($this));
+    }
+}
+
+
